--- a/docs/1_개발환경.md
+++ b/docs/1_개발환경.md
@@ -16,3 +16,14 @@
   - ANDROID_HOME 및 각종 PATH 설정
 
 # 6. Xcode, CocoaPods 설치
+
+# 7. 프로젝트 시작
+
+- npx react-native init LearnReactNative
+
+### 안드로이드 SDK 경로지정을 프로젝트에서 한번 더 해줘야 함
+
+- npm run android
+- SDK location not found. Define a valid SDK location with an ANDROID_HOME environment variable or by setting the sdk.dir path in your project's local properties file at '/Users/gotaehwan/projects/react-native-skills/LearnReactNative/android/local.properties'.
+  - local.properties 파일 생성 후 SDK 경로 지정해줘야 함
+    - https://stackoverflow.com/questions/32634352/react-native-android-build-failed-sdk-location-not-found
