리덕스 툴킷 간단 예시

--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -194,3 +194,102 @@ export default Counter;
 4. createStore를 사용하여 스토어를 만듭니다
 5. Provider를 사용하여 리액트 프로젝트에 리덕스를 적용합니다
 6. useSelector와 useDispatch를 사용하여 리덕스의 상태를 조회하거나 업데이트 합니다
+
+## 13.2 Redux Toolkit
+
+- 13.1에서 작성한 카운터 모듈을 toolkit으로 변경
+- slice는 액션 생성함수와 리듀서를 합친 개념
+
+```js
+import { createSlice } from "@reduxjs/toolkit";
+const initialState = { value: 1 };
+const counterSlice = createSlice({
+  name: "counter",
+  initialState,
+  reducers: {
+    increase(state, action) {
+      state.value += 1;
+    },
+    decrease(state, action) {
+      state.value -= 1;
+    },
+    increaseBy(state, action) {
+      state.value += action.payload;
+    },
+    decreaseBy(state, action) {
+      state.value -= action.payload;
+    },
+  },
+});
+
+export const { increase, decrease, increaseBy, decreaseBy } =
+  counterSlice.actions; // 액션 생성함수
+export default counterSlice.reducers;
+```
+
+### 13.2.1 액션 생성 함수와 리듀서
+
+- slice를 만들면 counterSlice actions는 액션 생성함수들이 들어있는 객체를
+- counterSlice.reducer는 리듀서 함수를 가리킵니다
+- 리듀서와 액션 생성 함수가 동시에 만들어 지기 때문에 액션 타입을 따로 선언할 필요가 없음
+  - 만약 액션 타입을 조회해야 할 일이 생기면 액션 생성함수의 type 필드를 확인하면 됨
+    - e.g. increase.type
+
+### 13.2.2 slice의 이름과 액션 타입
+
+- slice를 만들 때는 name을 지정해야 함
+
+  - name은 액션 타입이 만들어질 때 `name/액션이름` 형태로 사용 됨
+    - e.g. increase의 액션 타입 => `counter/increase`
+
+- increaseBy 리듀서
+  action.payload라는 값을 사용
+
+```js
+increaseBy(state, action {
+  state.value += action.payload
+})
+```
+
+### 13.2.3 액션의 payload
+
+- 리덕스 툴킷에서 액션 객체의 타입과 페이로드 중 페이로드는 이름이 payload로 통일 됨
+
+### 13.2.4 자동으로 이루어지는 불변성 관리
+
+- createSlice에서 사용하는 리듀서 메서드에서는 불변성을 신경쓰지 않고 state값을 직접 수령해도 됨
+- immer라는 라이브러리가 내장되어 있어서 불변성을 자동으로 관리해줌
+
+### 13.2.5 타입스크립트와 함께 사용하기
+
+- 1. initialState에 타입 달아주기
+- 2. 액션 타입에 payloadAction 사용하기
+
+```ts
+import { createSlice, PayloadAction } from "@reduxjs/toolkit";
+const initialState = { value: 1 };
+const counterSlice = createSlice({
+  name: "counter",
+  initialState,
+  reducers: {
+    increase(state, action) {
+      state.value += 1;
+    },
+    decrease(state, action) {
+      state.value -= 1;
+    },
+    increaseBy(state, action: PayloadAction<number>) {
+      state.value += action.payload;
+    },
+    decreaseBy(state, action: PayloadAction<number>) {
+      state.value -= action.payload;
+    },
+  },
+});
+
+export const { increase, decrease, increaseBy, decreaseBy } =
+  counterSlice.actions; // 액션 생성함수
+export default counterSlice.reducers;
+```
+
+- payload값의 타입은 PayloadAction의 generic으로 지정해줄 수 있음
