--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -293,3 +293,11 @@ export default counterSlice.reducers;
 ```
 
 - payload값의 타입은 PayloadAction의 generic으로 지정해줄 수 있음
+
+## 13.3 리덕스로 사용자 인증 구현하기
+
+### 13.3.1 라이브러리 설치하기
+
+```
+yarn add redux react-redux @reduxjs/toolkit @types/react-redux
+```
