redux toolkit 세팅

--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -301,3 +301,11 @@ export default counterSlice.reducers;
 ```
 yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 ```
+
+### 13.3.2 auth 모듈 작성하기
+
+### 13.3.3 루트 리듀서와 스토어를 만들고 프로젝트에 적용하기
+
+- 추후 여러개 리듀서를 만들 것을 대비해서 combineReducers를 사용
+- 책에선 store를 만들 때 createStore 메서드(from 'redux')를 사용했지만
+  - redux에선 configureStore 메서드를 권장(from '@reduxjs/toolkit')
