Auth app 틀 잡아주기

--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -309,3 +309,9 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 - 추후 여러개 리듀서를 만들 것을 대비해서 combineReducers를 사용
 - 책에선 store를 만들 때 createStore 메서드(from 'redux')를 사용했지만
   - redux에선 configureStore 메서드를 권장(from '@reduxjs/toolkit')
+
+### 13.3.4 AuthApp 틀 잡아주기
+
+- AuthStatus: 현재 사용자 인증 상태를 보여주는 컴포넌트
+- AuthButtons: 로그인, 로그아웃 버픈을 보여주는 컴포넌트
+- AuthApp: 위 두 컴포넌트를 보여주는 컴포넌트
