--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -315,3 +315,5 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 - AuthStatus: 현재 사용자 인증 상태를 보여주는 컴포넌트
 - AuthButtons: 로그인, 로그아웃 버픈을 보여주는 컴포넌트
 - AuthApp: 위 두 컴포넌트를 보여주는 컴포넌트
+
+### 13.3.5 AuthApp 리덕스와 연동하기
