--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -317,3 +317,9 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 - AuthApp: 위 두 컴포넌트를 보여주는 컴포넌트
 
 ### 13.3.5 AuthApp 리덕스와 연동하기
+
+### 13.3.6 useSelector의 DefaultRootState 지정하기
+
+- 안됨
+- https://stackoverflow.com/questions/57472105/react-redux-useselector-typescript-type-for-state
+  - 적용 해봤는데 안됨
