--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -323,3 +323,9 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 - 안됨
 - https://stackoverflow.com/questions/57472105/react-redux-useselector-typescript-type-for-state
   - 적용 해봤는데 안됨
+
+### 13.3.7 리덕스와 연동하는 로직을 Hook으로 분리하기
+
+- Hook으로 감싸면, 리덕스 상태를 다루는 로직과 컴포넌트 UI로직을 완전히 분리할 수 있다
+- 나중에 상태관리 라이브러리를 바꿀 때도 더욱 편하게 마이그레이션 할 수 있음
+- 커스텀 Hook을 재사용하는 상황이 있을 수 있음
