--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -329,3 +329,7 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 - Hook으로 감싸면, 리덕스 상태를 다루는 로직과 컴포넌트 UI로직을 완전히 분리할 수 있다
 - 나중에 상태관리 라이브러리를 바꿀 때도 더욱 편하게 마이그레이션 할 수 있음
 - 커스텀 Hook을 재사용하는 상황이 있을 수 있음
+
+## 13.4 리덕스로 항목 CRUD(추가하기, 읽기, 업데이트하기, 삭제하기) 구현하기
+
+### 13.4.1 todos 모듈 작성하기
