--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -333,3 +333,5 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 ## 13.4 리덕스로 항목 CRUD(추가하기, 읽기, 업데이트하기, 삭제하기) 구현하기
 
 ### 13.4.1 todos 모듈 작성하기
+
+### 13.4.2 TodoApp 틀 잡아주기
