--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -335,3 +335,5 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 ### 13.4.1 todos 모듈 작성하기
 
 ### 13.4.2 TodoApp 틀 잡아주기
+
+### 13.4.3 TodoApp 리덕스와 연동하기
