--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -337,3 +337,28 @@ yarn add redux react-redux @reduxjs/toolkit @types/react-redux
 ### 13.4.2 TodoApp 틀 잡아주기
 
 ### 13.4.3 TodoApp 리덕스와 연동하기
+
+## 13.5 리덕스 미들웨어를 사용하여 REST API 요청 상태 관리하기
+
+- 리덕스에서 비동기 작업을 처리할 때는 미들웨어라는 기능을 사용
+- 비동기 작업 처리 시 사용할 수 있는 다양한 미들웨어
+
+  - redux-thunk : 함수를 기반으로 작동
+  - redux-saga : Generator를 기반으로 작동
+  - redux-observable : RxJS를 기반으로 작동
+  - 이 중에서 redux-thunk를 사용, Redux Toolkit에 내장되어 있음
+
+- Redux thunk
+  - type을 지닌 객체가 아닌, 함수 타입을 dispatch할 수 있게 해줌
+
+```js
+function incrementAsync() {
+  return (dispatch, getState) => {
+    setTimeout(() => {
+      dispatch(increment());
+    }, 1000);
+  };
+}
+```
+
+## 13.5.1 미들웨어 적용하기
