--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -361,4 +361,15 @@ function incrementAsync() {
 }
 ```
 
-## 13.5.1 미들웨어 적용하기
+### 13.5.1 미들웨어 적용하기
+
+### 13.5.2 API 요청 함수 준비하기
+
+- REST API를 호출을 위햐 axios 사용
+
+```
+yarn add axios
+```
+
+- https://jsonplaceholder.typicode.com
+  - /posts, /comments, /albums, /photos, /todos, /users 등을 사용할 수 있다
