--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -373,3 +373,62 @@ yarn add axios
 
 - https://jsonplaceholder.typicode.com
   - /posts, /comments, /albums, /photos, /todos, /users 등을 사용할 수 있다
+
+### 13.5.3 posts 모듈 만들기
+
+- slice에 post 관련 생성
+
+```ts
+export const fetchPosts = createAsyncThunk("posts/fetchPosts", getPosts);
+
+const postsSlice = createSlice({
+  name: "posts",
+  initialState,
+  reducers: {},
+  extraReducers: {
+    [fetchPosts.pending.type]: (state) => {
+      state.posts = {
+        loading: true,
+        data: null,
+        error: null,
+      };
+    },
+    [fetchPosts.fulfilled.type]: (state, action: PayloadAction<Post[]>) => {
+      state.posts.data = action.payload;
+      state.posts.loading = false;
+    },
+    [fetchPosts.rejected.type]: (state, action: PayloadAction<Error>) => {
+      state.posts.error = action.payload;
+      state.posts.loading = false;
+    },
+  },
+});
+```
+
+- createAsyncThunk 함수는 Promise를 반환하는 함수를 기반으로 함수가 호출됐을 때,
+  성공하거나 실패했을 때 사용할 액션들을 제공합니다
+  - 이 함수를 사용하면 아래 액션 생성 함수들이 만들어집니다
+  - fetchPosts.pending
+    - posts/fetchPosts/pending 액션
+    - 작업이 시작될 때 발생하는 액션
+  - fetchPosts.fulfilled
+    - posts/fetchPosts/fulfilled 액션
+    - 작업이 끝나면 발생하는 액션
+    - payload는 Promise에서 resolve된 값
+  - fetchPosts.rejected
+    - posts/fetchPosts/rejected 액션
+    - 작업이 실패하면 발생하는 액션
+    - payload는 Promise에서 reject된 값
+
+```js
+dispatch(fetchPost());
+```
+
+- 상황별로 위 액션들이 dispatch 됨
+
+- extraReducer
+
+  - 액션생성함수와 리듀서를 동시에 만드는게 아니라
+  - 이미 정의된 액션들의 리듀서를 작성하는 것이기 때문
+
+- 작성한 thunk 모듈을 RootReducer에 등록
