--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -432,3 +432,7 @@ dispatch(fetchPost());
   - 이미 정의된 액션들의 리듀서를 작성하는 것이기 때문
 
 - 작성한 thunk 모듈을 RootReducer에 등록
+
+### 13.5.4 PostsApp 틀 잡아주기
+
+- API를 요청해서 받은 데이터를 보여줄 컴포넌트를 만들어보자
