--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -436,3 +436,14 @@ dispatch(fetchPost());
 ### 13.5.4 PostsApp 틀 잡아주기
 
 - API를 요청해서 받은 데이터를 보여줄 컴포넌트를 만들어보자
+
+### 13.5.5 PostsApp 리덕스와 연동하기
+
+- 커스텀 hook을 만들어 PostsApp을 리덕스와 연동해보자
+- 이전과 달리 이번 훅은 상태와 액션이 동시에 필요하기 때문에
+  - 상태와 액션을 위한 훅을 따로 만들지 않고 usePosts에 모두 작성
+
+## 13.6 리덕스 정리
+
+- 불편하긴 해도 유용하다
+  - 나) 솔직히 모르겠다 만약 서버사이드렌더링에서 리덕스 대체제가 있다면 리덕스는 쓸일이 없을 것 같다
