--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -447,3 +447,68 @@ dispatch(fetchPost());
 
 - 불편하긴 해도 유용하다
   - 나) 솔직히 모르겠다 만약 서버사이드렌더링에서 리덕스 대체제가 있다면 리덕스는 쓸일이 없을 것 같다
+
+## 13.7 리코일 살펴보기
+
+### 13.7.1 atom
+
+```ts
+const counterState = atom({
+  key: "counterState",
+  default: 0,
+});
+
+const [count, setCount] = useRecoilState(counterState);
+```
+
+- react의 useState와 비슷
+
+### 13.7.2 Recoil Root
+
+- 리덕스의 Provider와 비슷한 역할을 함
+
+### 13.7.3 selector
+
+```ts
+const myInfoState = atom({
+  key: "myInfoState",
+  default: {
+    id: 1,
+    username: "johndoe",
+    displayName: "John Doe",
+    isActive: true,
+  },
+});
+
+// 읽기 전용 selector
+const displayName = selector({
+  key: "displayName",
+  get: ({ get }) => get(myInfoState).displayName,
+});
+
+// 읽고 쓰기 가능한 selector
+const isActiveState = selector({
+  key: "isActiveState",
+  get: ({ get }) => get(myInfoState).isActive,
+  set: ({ set }, newValue) => {
+    set(myInfoState, (prevState) => {
+      if (newValue instanceof DefaultValue) return newValue; // useResetRecoilState를 방지하기 위함 - default값으로 초기화
+      return { ...prevState, isActive: newValue };
+    });
+  },
+});
+
+function UserInfo() {
+  const nickName = useRecoilValue(displayName);
+  // ...
+}
+
+function ToggleActive() {
+  const [isActive, setIsActive] = useRecoilState(isActive);
+
+  // ...
+}
+```
+
+- selector의 기능은 리코일에서 관리하는 상태의 특정 부분만 선택할 때 사용
+- 또는 상태를 사용하여 연산한 값을 조회할 때도 사용
