--- a/docs/13_상태관리.md
+++ b/docs/13_상태관리.md
@@ -512,3 +512,11 @@ function ToggleActive() {
 
 - selector의 기능은 리코일에서 관리하는 상태의 특정 부분만 선택할 때 사용
 - 또는 상태를 사용하여 연산한 값을 조회할 때도 사용
+
+### 13.7.4 라이브러리 설치하기
+
+- yarn add recoil
+
+## 13.8 리코일로 Auth App 구현하기
+
+- useMemo로 set을 하는 함수를 객체로 리턴해서 그것을 사용
