--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -36,3 +36,29 @@ function MyComponent() {
   - 캐싱도 기본적으로 제공하여 쉽게 구현할 수 있습니다.
 
 - 이번장에선 리액트 쿼리를 사용하여 간단한 게시판 앱을 만들어보자
+
+## 15.1 프로젝트 생성 및 초기 설정하기
+
+- 목표
+
+  - 회원가입/로그인
+  - 게시글 등록 / 조회 / 수정 / 삭제
+  - 댓글 등록 / 조회 / 수정 / 삭제
+
+- 리액트 내비게이션 사용
+
+- 프로젝트 시작
+
+```
+npx react-native init ArticlesApp --template react-native-template-typescript
+
+cd ArticlesApp
+
+yarn add @react-navigation/native react-native-screens react-native-safe-area-context @react-navigation/native-stack @react-navigation/bottom-tabs
+
+yarn add react-native-vector-icons @types/react-native-vector-icons
+
+yarn add @react-native-async-storage/async-storage
+
+yarn add react-query axios @types/axios
+```
