--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -62,3 +62,7 @@ yarn add @react-native-async-storage/async-storage
 
 yarn add react-query axios @types/axios
 ```
+
+### 15.1.1 react-native-vector-icons 적용하기
+
+- MaterialIcon 사용
