--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -66,3 +66,21 @@ yarn add react-query axios @types/axios
 ### 15.1.1 react-native-vector-icons 적용하기
 
 - MaterialIcon 사용
+
+### 15.1.2 리액트 내비게이션 적용하기
+
+#### 화면 구성
+
+RootStack
+
+- MainTab
+  - Articles
+  - UserMenu
+- Register
+- Login
+- Article
+- Write
+
+#### react-native-vector-icons
+
+- https://oblador.github.io/react-native-vector-icons/
