--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -84,3 +84,58 @@ RootStack
 #### react-native-vector-icons
 
 - https://oblador.github.io/react-native-vector-icons/
+
+## 15.2 useQuery를 사용하여 데이터 조회하기
+
+```ts
+import { useQuery } from "react-query";
+
+function Sample() {
+  const { data, error, isLoading } = useQuery("articles", getArticles);
+}
+```
+
+- 첫 번째 인자 : 조회하고 싶은 데이터의 캐시 키
+  - "articles"
+- 두 번째 인자 : Promise를 반환하는 함수
+  - getArticles
+- 세 번째 인자 : 옵션
+  - 캐싱 기간, 캐싱 비활성화 등
+
+### 15.2.1 반환값
+
+- useQuery를 사용하여 반환된 result 객체는 다음 값을 지니고 있습니다.
+
+  - status : API의 요청 상태를 문자열로 나타냄
+    - loading : 데이터 요청 중
+    - error : 오류 발생
+    - success : 데이터 요청 성공
+    - idle : 비활성화된 상태(따로 설정해서 비활성화한 경우)
+  - isLoading : status의 loading 상태인지 아닌지
+    - status === 'loading'
+  - isError : status === 'error'
+  - isSuccess : status === 'success'
+  - isIdle : status === 'idle'
+  - error : 오류가 발생했을 때 오류 정보
+  - data : 요청 성공한 데이터
+  - isFetching : 데이터가 요청 중일 때 true
+    - 데이터가 이미 존재하는 상태에서 재요청할 때 isLoading은 false이지만 isFetching은 true
+  - refetch : 다시 요청을 시작하는 함수
+
+- 그 외 나머지 필드는 아래 링크에서 확인하자
+  - https://tanstack.com/query/v4/docs/guides/queries
+
+#### useQuery 사용 예
+
+```tsx
+import { useQuery } from "react-query";
+import { Text, View } from "react-native";
+
+function Sample() {
+  const result = useQuery("articles", getArticles);
+  const { data, error, isLoading } = result;
+  if (isLoading) return <Text>로딩 중...</Text>;
+  if (error) return <Text>오류 발생</Text>;
+  return <View>{/* 데이터 보여주기 */}</View>;
+}
+```
