--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -139,3 +139,61 @@ function Sample() {
   return <View>{/* 데이터 보여주기 */}</View>;
 }
 ```
+
+### 15.2.2 배열 타입의 캐시 키
+
+- 만약 요청 함수를 호출하는 상황에서 파라미터가 필요하다면 다음과 같이 구현
+
+```ts
+function Sample({ id }) {
+  const result = useQuery(["article", id], () => getArticle(id));
+}
+```
+
+- 파라미터가 달라지면 키값이 달라지게 만들음
+- 요청 결과물이 특정 변수에 따라 달라진다면 꼭 캐시 키에 포함시키자 !
+
+### 15.2.3 useQuery의 options
+
+```ts
+function Sample() {
+  const result = useQuery("articles", getArticles, {
+    // options
+    enabled: true,
+    refetchOnMount: true,
+  });
+}
+```
+
+- options에 설정할 수 있는 필드들
+  - enabled: boolean
+    - 이 값이 false라면 컴포넌트가 마운트 될 때 자동으로 요청하지 않습니다.
+    - refetch 함수로만 요청이 시작됩니다
+  - retry: boolean | number | (failureCount: number, error: Error) => boolean
+    - 요청이 실패했을 때 재요청할지 설정할 수 있습니다
+    - true -> 성공할 때 까지 계속 반복 요청
+    - false -> 실패하면 재요청하지 않음
+    - number -> 재요청할 횟수
+  - retryDelay: number | (retryAttempt: number, error: TError) => number
+    - 요청이 실패한 후 재요청할 때 지연 시간(ms)
+    - 기본 값은 실패 횟수 n의 제곱 초 만큼 기다렸다가 재요청, 최대 30초까지 기다림
+  - staleTime: 데이터의 유효시간(ms) - 기본값: 0
+  - cacheTime: 데이터의 캐시 시간을 ms 단위로 설정 - 기본값: 5분
+    - 컴포넌트가 언마운트되고 해당 데이터를 얼마나 유지할지 결정
+    - cacheTime vs. staleTime => 나중에 자세히 다룸
+  - refetchInterval: false | number
+    - 일정시간(ms) 데이터를 새로고침하도록 설정할 수 있음
+  - refetchOnmount: boolean | 'always'
+    - 컴포넌트가 마운트 될 때 재요청하는 방식
+    - 기본값은 true
+    - true -> 데이터가 유효하지 않을 때 재요청
+    - false -> 컴포넌트가 다시 마운트되어도 재요청하지 않음
+    - 'always' -> 데이터의 유효 여부와 관계없이 무조건 재요청
+  - onSuccess: (data: Data) => void
+    - 데이터 요청이 성공하고 특정 함수를 호출하고 싶을 때 사용
+  - onError: (error: Error) => void
+    - 데이터 요청이 실패하고 나서 특정 함수를 호출하고 싶을 때 사용
+  - onSettled: (data?: Data, error?: Error) => void
+    - 데이터 요청의 성공 여부와 관계없이 요청이 끝나면 특정함수를 호출하도록 설정
+  - initialData: Data | () => Data
+    - 데이터 초기값을 지정하고 싶을 때 사용
