--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -197,3 +197,61 @@ function Sample() {
     - 데이터 요청의 성공 여부와 관계없이 요청이 끝나면 특정함수를 호출하도록 설정
   - initialData: Data | () => Data
     - 데이터 초기값을 지정하고 싶을 때 사용
+
+### 15.2.4 staleTime과 cacheTime
+
+- stale : 신선하지 않다
+- staleTime : 더 이상 유효하지 않다는 뜻
+
+  - 기본값은 0초
+  - 데이터를 조회하면 바로 유효하지 않게 됨
+  - 데이터가 유효하지 않다면 기회가 주어졌을 때 다시 요청하여 데이터를 최신화해야 함
+  - 재요청 기회가 주어지는 시점 -> useQuery를 사용하는 컴포넌트가 마운트 될 때
+
+- cacheTime은 컴포넌트가 언마운트되고 해당 데이터를 얼마 동안 유지할지에 대한 설정
+  - 기본값은 5분
+  - 만약 useQuery를 사용한 컴포넌트가 언마운트되고 5분안에 다시 마운트된다면 isLoading값이 true로 되지 않고,
+    - 처음 렌더링하는 시점부터 data값이 이전에 불러온 데이터로 채워져있음
+  - 그리고 staleTime에 따라 해당 데이터가 유효하다면 재요청하지 않고
+  - 유효하지 않다면 재요청
+
+#### Case 1. (기본 옵션) 기본 옵션에서 staleTime은 0초 && cacheTime은 5분
+
+- SampleA 컴포넌트에서 useQuery('articles', getArticles)를 사용
+  - 데이터가 조회되는 순간 데이터가 더 이상 유효하지 않다고 간주
+- 나중에 SampleB 컴포넌트가 화면에 마운트되고, 이 컴포넌트도 useQuery('articles', getArticles)를 사용
+  - SampleB가 화면에 나타나는 순간, SampleA에서 불러온 데이터를 그대로 보여줌
+  - 캐시 키를 통하여 해당 데이터가 유효한지 확인
+    - 데이터가 유효하지 않기 때문에 재요청함
+    - 재요청이 끝나면 새로운 데이터가 SampleB와 SampleA에 모두 반영 됨
+- SampleA와 SampleB가 모두 언마운트 되는 경우
+  - 같은 캐시 키를 가진 useQuery를 사용하는 컴포넌트가 화면에서 모두 언마운트되면 cacheTime 5분 동안 데이터가 유지 됨
+- 5분안에 SampleA 컴포넌트가 다시 마운트 됨
+  - 컴포넌트가 처음 보일 때 이전에 불러온 데이터를 그대로 사용
+  - 데이터가 유효하지 않기 때문에 재요청하고, 새로운 데이터로 대체
+- SampleA 컴포넌트가 언마운트되고 5분 뒤에 다시 마운트 되는 경우
+  - 5분이 지났기 때문에 캐시에서 기존 데이터가 제거됐음
+  - data가 undefined이며, 새로 요청
+
+#### Case 2. (staleTime 3분) 만약 staleTime을 3분(1000 _ 60 _ 3)으로 설정했을 때
+
+- SampleA 컴포넌트에서
+
+```ts
+useQuery("articles", getArticles, {
+  staleTime: 1000 * 60 * 3,
+});
+```
+
+- 응답 받은 데이터는 3분 동안 유효
+- 3분 안에 같은 키를 가진 useQuery를 사용하는 컴포넌트 SampleB 컴포넌트가 마운트 되는 경우
+  - 기존 데이터를 그대로 사용
+  - 새로 요청하지 않음
+- SampleA와 SampleB가 모두 언마운트 되는 경우
+  - 데이터는 5분 동안 캐시에 유지
+- 그리고 5분안에 SampleA 컴포넌트가 마운트 되면
+  - 5분안에 마운트 됐기 때문에, 캐시에 있던 데이터를 그대로 사용
+    - 만약 마지막으로 데이터를 요청한지 3분안에 마운트 됐다면
+      - 데이터를 새로 요청하지 않음
+    - 언마운트 후 3분이 지난 경우
+      - 데이터를 새로 요청하고 응답이 오면 새로운 데이터로 대체함
