--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -255,3 +255,12 @@ useQuery("articles", getArticles, {
       - 데이터를 새로 요청하지 않음
     - 언마운트 후 3분이 지난 경우
       - 데이터를 새로 요청하고 응답이 오면 새로운 데이터로 대체함
+
+## 15.3 API 요청할 준비하기
+
+- useQuery 사용을 위한 사전 작업
+  - API에서 사용할 타입 선언
+  - axios 인스턴스 생성
+  - React query Provider로 감싸기
+
+### 15.3.1 타입 선언하기
