--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -264,3 +264,30 @@ useQuery("articles", getArticles, {
   - React query Provider로 감싸기
 
 ### 15.3.1 타입 선언하기
+
+### 15.3.2 axios 인스턴스 만들기
+
+- axios 인스턴스를 만드는 것의 장점
+
+  - baseURL 설정
+  - Authorization 헤더를 모든 요청에 적용하기 위해
+    - 회원 인증 기능 구현할 때 다룰 예정
+  - 주의) localhost
+    - 안드로이드에선 localhost 주소로 요청하면 PC가 아닌 기기 자체를 가리키게 되어 요청이 제대로 이뤄지지 않음
+    - IOS에선 localhost로 바로 접속할 수 있음
+
+- 안드로이드 기기에서 실제 내부 주소를 입력하지 않고 localhost에 접속하는 방법
+  - adb reverse 기능을 사용
+  - 에뮬레이터가 실행중인 상태에서 터미널에 => `adb reverse tcp:1337 tcp:1337`
+    - 안드로이드 기기 내에서 localhost:1337을 사용해도 PC에 열려있는 1337포트로 접속하게 됨
+    - 만약 시뮬레이터가 여러 개를 가동중이거나 실제 기기를 함께 사용 중이라면 디바이스 목록을 확인하고 특정 디바이스를 선택하여 reverse를 설정해야 함
+
+```
+$ adb devices
+List of devices attached
+emulator-5554   device
+
+$ adb -s emulator-5554 reverse tcp:1337 tcp:1337
+```
+
+- 안드로이드 시뮬레이터를 새로 실행할 때 마다 해줘야 함
