--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -291,3 +291,7 @@ $ adb -s emulator-5554 reverse tcp:1337 tcp:1337
 ```
 
 - 안드로이드 시뮬레이터를 새로 실행할 때 마다 해줘야 함
+
+### 15.3.3 QueryClientProvider 사용하기
+
+- QueryClientProvider는 캐시를 관리할 때 사용하는 QueryClient 인스턴스를 자식 컴포넌트에서 사용할 수 있게 해줌
