--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -295,3 +295,7 @@ $ adb -s emulator-5554 reverse tcp:1337 tcp:1337
 ### 15.3.3 QueryClientProvider 사용하기
 
 - QueryClientProvider는 캐시를 관리할 때 사용하는 QueryClient 인스턴스를 자식 컴포넌트에서 사용할 수 있게 해줌
+
+## 15.4 게시글 목록 조회 기능 구현하기
+
+### 15.4.1 API 함수 작성하기
