--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -299,3 +299,15 @@ $ adb -s emulator-5554 reverse tcp:1337 tcp:1337
 ## 15.4 게시글 목록 조회 기능 구현하기
 
 ### 15.4.1 API 함수 작성하기
+
+### 15.4.2 useQuery 사용하기
+
+- article-server(strapi) 가동
+
+  - node 버전을 `>=10.16.0 <=14.x.x` 로 맞춰야 함
+  - nvm ls -> 14.19.3 있는 것 확인
+  - nvm use 14.19.3
+  - yarn develop (package.json의 스크립트 보고 치면 됨)
+
+- react-native 프로젝트에서 yarn android
+  - 에뮬레이터가 실행되면 adb reverse tcp:1337 tcp:1337
