--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -311,3 +311,9 @@ $ adb -s emulator-5554 reverse tcp:1337 tcp:1337
 
 - react-native 프로젝트에서 yarn android
   - 에뮬레이터가 실행되면 adb reverse tcp:1337 tcp:1337
+
+### 15.4.3 컴포넌트 만들기
+
+#### Postman 으로 게시글 추가하기
+
+- 14장 정리글 참고
