--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -317,3 +317,9 @@ $ adb -s emulator-5554 reverse tcp:1337 tcp:1337
 #### Postman 으로 게시글 추가하기
 
 - 14장 정리글 참고
+
+## 15.5 게시글 조회 기능 구현하기
+
+- ArticlesScreen에서 게시글을 눌렀을 때 선택한 게시글을 보여주는 기능을 구현해보자
+
+### 15.5.1 화면 준비하기
