--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -323,3 +323,5 @@ $ adb -s emulator-5554 reverse tcp:1337 tcp:1337
 - ArticlesScreen에서 게시글을 눌렀을 때 선택한 게시글을 보여주는 기능을 구현해보자
 
 ### 15.5.1 화면 준비하기
+
+### 15.5.2 API 함수 작성하기
