--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -325,3 +325,16 @@ $ adb -s emulator-5554 reverse tcp:1337 tcp:1337
 ### 15.5.1 화면 준비하기
 
 ### 15.5.2 API 함수 작성하기
+
+### 15.5.3 useQuery 사용하기
+
+- 한 컴포넌트에서 useQuery를 여러개 사용할 땐 구조분해 할당보단 아래와 같이 접근 연산자를 사용하자
+
+```tsx
+// ArticleScreen.tsx
+const articleQuery = useQuery(["article", id], () => getArticle(id));
+const commentsQuery = useQuery(["comments", id], () => getComments(id));
+
+<Text>{articleQuery.data.title}</Text>
+<Text>{commentsQuery.data.length}개의 댓글</Text>
+```
