--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -338,3 +338,14 @@ const commentsQuery = useQuery(["comments", id], () => getComments(id));
 <Text>{articleQuery.data.title}</Text>
 <Text>{commentsQuery.data.length}개의 댓글</Text>
 ```
+
+### 15.5.4 컴포넌트 만들기
+
+- ArticleView를 ArticleScreen에서 FlatList의 ListHeaderComponent로 사용하는 이유
+
+  - 내용이 길어지거나 댓글이 많아지면 사용자가 스크롤 할 수 있어야 하기 때문
+  - 만약 댓글이 몇 개 달리지 않는다면, 여기에서 FlatList 대신 ScrollView를 사용
+    - ScrollView + 배열 메서드 map
+
+- CommentItem
+  - 댓글을 보여주기 위한 컴포넌트
