--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -349,3 +349,12 @@ const commentsQuery = useQuery(["comments", id], () => getComments(id));
 
 - CommentItem
   - 댓글을 보여주기 위한 컴포넌트
+
+## 15.6 회원 인증 기능 준비
+
+### 15.6.1 화면 준비하기
+
+- CRUD를 하기위해선 회원 인증 기능이 선행되어야 함
+
+- UserMenuScreen은 MainTab에 등록
+- LoginScreen, RegisterScreen, MyArticlesScreen은 RootStack에 등록
