--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -360,3 +360,5 @@ const commentsQuery = useQuery(["comments", id], () => getComments(id));
 - LoginScreen, RegisterScreen, MyArticlesScreen은 RootStack에 등록
 
 ### 15.6.2 사용자 메뉴 화면 만들기
+
+### 15.6.3 회원 인증 API 함수 만들기
