--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -362,3 +362,7 @@ const commentsQuery = useQuery(["comments", id], () => getComments(id));
 ### 15.6.2 사용자 메뉴 화면 만들기
 
 ### 15.6.3 회원 인증 API 함수 만들기
+
+### 15.6.4 AuthForm 컴포넌트 만들기
+
+- 회원가입, 로그인 form UI만 구현
