--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -366,3 +366,65 @@ const commentsQuery = useQuery(["comments", id], () => getComments(id));
 ### 15.6.4 AuthForm 컴포넌트 만들기
 
 - 회원가입, 로그인 form UI만 구현
+
+## 15.7 useMutation로 조회 외 작업 처리하기
+
+- 데이터를 조회할 때는 useQuery를 사용
+- 데이터를 생성/수정/삭제할 때는 useMutation을 사용하여 구현할 수 있다
+
+- useQuery는 비활성화 옵션을 설정하지 않는 이상 컴포넌트가 렌더링 되는 시점에 자동으로 요청이 시작되는 반면,
+- useMutation은 특정 함수에서 우리가 원하는 때에 직접 요청을 시작하는 형태로 작동
+
+- useMutation을 이용하면 요청 관련 상태의 관리와 요청 처리 전/후로 실행할 작업을 쉽게 설정할 수 있음
+
+```tsx
+import { useMutation } from "react-query";
+
+function Sample() {
+  const {
+    mutate, // 요청을 시작하는 함수
+    mutateAsync, // mutate와 동일, 함수를 호출 했을 때 반환 값이 Promise 타입
+    status, // 요청의 상태를 문자열로 나타냄('idle', 'loading', 'error', 'success')
+    isIdle, // status 값에 따라 boolean 값을 나타냄
+    isLoading, // status 값에 따라 boolean 값을 나타냄
+    isError, // status 값에 따라 boolean 값을 나타냄
+    isSuccess, // status 값에 따라 boolean 값을 나타냄
+    data, // 요청이 성공한 데이터
+    error, // 오류가 발생했을 때 오류 정보
+    reset, // 상태를 모두 초기화하는 함수
+  } = useMutation(
+    (params: any) => {
+      // 요청을 시작할 때 실행할 함수
+    },
+    {
+      // useMutation의 옵션
+      onSuccess: (data) => {
+        // 요청 성공 시 실행할 함수
+      },
+      onError: (error) => {
+        // 요청 실패 시 실행할 함수
+      },
+      onSettled: (data, error) => {
+        // 요청 성공/실패 상관없이 무조건 실행할 함수
+      },
+    }
+  );
+
+  return (
+    <Button
+      title="요청하기"
+      onPress={() => {
+        mutate();
+      }}
+    />
+  );
+}
+```
+
+- useMutation(첫 번째 인자, 두 번째 인자)
+  - 첫 번째 인자 : 요청함수(axios)
+  - 두 번째 인자 : 콜백함수, 생략 가능
+
+### 15.7.1 반환값
+
+- 코드에 주석으로 설명을 남김
