--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -428,3 +428,14 @@ function Sample() {
 ### 15.7.1 반환값
 
 - 코드에 주석으로 설명을 남김
+
+## 15.8 회원 인증 기능 구현하기
+
+### 15.8.1 커스텀 훅 만들기
+
+- useMutation에서 onError의 아규먼트인 error는 unknown 타입으로 되어있기 때문에
+
+  - 직접 타입을 지정해서 사용해주면 좋다
+
+- 회원가입 요청을 보내면 405 method not allowed 에러 발생
+  - TODO: 에러 해결하기
