--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -436,3 +436,7 @@ function Sample() {
 - useMutation에서 onError의 아규먼트인 error는 unknown 타입으로 되어있기 때문에
 
   - 직접 타입을 지정해서 사용해주면 좋다
+
+### 15.8.2 사용자 인증 상태 관리하기
+
+- Context API 사용
