--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -440,3 +440,8 @@ function Sample() {
 ### 15.8.2 사용자 인증 상태 관리하기
 
 - Context API 사용
+
+### 15.8.3 인증 토큰 설정하기
+
+- JWT를 axios에 적용해주자
+  - axiosInstance.defaults.headers.Authorization = 'Bearer {jwt}';
