--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -445,3 +445,5 @@ function Sample() {
 
 - JWT를 axios에 적용해주자
   - axiosInstance.defaults.headers.Authorization = 'Bearer {jwt}';
+
+### 15.8.4 로그아웃 기능 구현하기
