--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -447,3 +447,28 @@ function Sample() {
   - axiosInstance.defaults.headers.Authorization = 'Bearer {jwt}';
 
 ### 15.8.4 로그아웃 기능 구현하기
+
+### 15.8.5 AsyncStorage로 인증 상태 유지하기
+
+- ios 환경인 경우
+  - npx pod-install
+
+```
+yarn add @react-native-async-storage/async-storage
+```
+
+- 재시작
+  - yarn android
+
+#### 15.8.5.1 authStorage에 인증 정보 담기
+
+#### 15.8.5.2 authStorage에서 인증 정보 불러오기
+
+- App에서 useAuthLoadEffect를 사용하지 않고 RootStack에서 사용한 이유
+  - ContextProvider로 감싸져 있지 않기 때문
+
+#### 15.8.5.3 로그아웃 후 authStorage 초기화하기
+
+### 15.8.6 로그인 / 회원가입 오류 처리하기
+
+- iOS에선 Alert, android에선 Toast
