--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -472,3 +472,9 @@ yarn add @react-native-async-storage/async-storage
 ### 15.8.6 로그인 / 회원가입 오류 처리하기
 
 - iOS에선 Alert, android에선 Toast
+
+## 15.9 게시글 작성 기능 구현하기
+
+- 게시글 - 로그인한 사용자만 작성할 수 있게 해보자
+
+### 15.9.1 게시글 작성 버튼 준비하기
