--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -478,3 +478,5 @@ yarn add @react-native-async-storage/async-storage
 - 게시글 - 로그인한 사용자만 작성할 수 있게 해보자
 
 ### 15.9.1 게시글 작성 버튼 준비하기
+
+### 15.9.2 게시글 작성 화면 만들기
