--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -480,3 +480,5 @@ yarn add @react-native-async-storage/async-storage
 ### 15.9.1 게시글 작성 버튼 준비하기
 
 ### 15.9.2 게시글 작성 화면 만들기
+
+### 15.9.3 게시글 작성 API 함수 만들기
