--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -482,3 +482,25 @@ yarn add @react-native-async-storage/async-storage
 ### 15.9.2 게시글 작성 화면 만들기
 
 ### 15.9.3 게시글 작성 API 함수 만들기
+
+### 15.9.4 게시글 작성 버튼 만들기
+
+- WriteScreen의 헤더 우측에 작성(제출) 버튼을 만들어보자
+
+```tsx
+useEffect(() => {
+  navigation.setOptions({
+    headerRight: () => (
+      <Pressable
+        hitSlop={8}
+        onPress={onSubmit}
+        style={({ pressed }) => pressed && styles.headerRightPressed}
+      >
+        <MaterialIcons name="send" size={24} color="#2196f3" />
+      </Pressable>
+    ),
+  });
+}, [navigation, onSubmit]);
+```
+
+- navigation.setOptions로 상단 네비에 버튼을 추가할 수 있다
