--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -504,3 +504,27 @@ useEffect(() => {
 ```
 
 - navigation.setOptions로 상단 네비에 버튼을 추가할 수 있다
+
+### 15.9.5 useMutation으로 게시글 작성 API 호출하기
+
+- useMutation으로 작성한 게시글을 서버로 보내보자
+
+### 15.9.6 QueryClient로 데이터 새로고침하기
+
+- useQuery를 사용할 때 입력한 캐시키를 사용하여 기존 데이터를 만료 시키고 새로 불러오도록 처리할 수 있음
+  - useQueryClient hook을 사용
+    - QueryClientProvider에 넣었던 queryClient를 사용할 수 있게 해줌
+
+### 15.9.7 QueryClient로 캐시 데이터 직접 수정하기
+
+- 캐시를 만료하는 방법으로 추가했었지만(15.9.6)
+- 직접 캐시데이터에 응답데이터를 추가하는 방법을 사용할 수도 있다
+
+```ts
+queryClient.setQueryData("articles", articles.concat(article)); // 새로운 글을 articles 쿼리의 데이터에 추가
+```
+
+- setQueryData : 캐시 데이터를 업데이트하는 메서드
+
+- 개인적으론 캐시된 데이터를 만료시키고 새로 가져오는 것이 더 좋은 방법인 것 같다
+  - 내 글말고 다른 글이 추가되었을 수도 있으므로
