--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -528,3 +528,135 @@ queryClient.setQueryData("articles", articles.concat(article)); // 새로운 글
 
 - 개인적으론 캐시된 데이터를 만료시키고 새로 가져오는 것이 더 좋은 방법인 것 같다
   - 내 글말고 다른 글이 추가되었을 수도 있으므로
+
+## 15.10 게시글 페이지네이션 기능 구현하기
+
+- Strapi는 쿼리스트링 파라미터로 정렬기능 제공
+
+`GET http://localhost:1337/articles?_sort=id:DESC&_limit=10&id_lt=16`
+
+- 역순, 10개 제한
+- id_lt : Less than
+
+  - 처음 요청 이후 가변적
+
+- postman으로 25개 이상 글 추가
+
+### 15.10.1 게시글 목록 조회 API 함수 변경하기
+
+### 15.10.2 useInfiniteQuery 사용하기
+
+- react-query에서 페이지네이션을 구현할 때 useInfiniteQuery를 사용
+- useQuery와 비슷
+  - 차이점
+    - 함수 부분에서 pageParam을 사용하고
+    - 옵션 부분에서 getNextPageParam을 설정해줘야 함
+
+```ts
+const { data } = useInfiniteQuery(
+  "articles",
+  ({ pageParam }) => getArticles({ cursor: pageParam }),
+  {
+    getNextPageParam: (lastPage) =>
+      lastPage.length === 10 ? lastPage[lastPage.length - 1].id : undefined,
+  }
+);
+```
+
+- getNextPageParam
+
+  - 쿼리 옵션
+    - (lastPage, allPages) => unknown | undefined
+      - lastPage : 가장 마지막에 불러온 페이지 => `Article[]`
+      - allPage: 지금까지 불러온 모든 페이지 => `Article[][]`
+
+- lastPage.length가 10개 미만이면 다음 페이지가 존재하지 않으니 undefined를 반환
+
+- useInfiniteQuery 에서 반환되는 객체
+  - data : 데이터
+  - fetchNextPage: 다음 페이지를 불러오는 함수
+  - hasNextPage: 다음 페이지 존재 유무를 알려줌
+    - 만약 getNextPageParam에서 undefined를 반환했다면 이 값은 false
+    - 그 외엔 true
+  - isFetchingNextPage: 다음 페이지를 불러오고 있는지 여부
+  - 그 외 useQuery에서 반환되는 모든 필드들이 존재
+
+### 15.10.3 게시글 작성 후 처리 로직 변경하기
+
+- WriteScreen에서 게시글 작성 후 데이터를 최신화하는 로직이 달라짐
+
+```ts
+/** before */
+// 새로운 글을 작성하면 articles 쿼리를 다시 요청하도록 설정
+queryClient.invalidateQueries("articles");
+
+// 캐시 데이터에 새로운 글을 추가
+// articles 쿼리의 (캐싱된)데이터를 가져옴
+const articles = queryClient.getQueryData<Article[]>("articles") ?? [];
+// 새로운 글을 articles 쿼리의 데이터에 추가
+queryClient.setQueryData("articles", articles.concat(article));
+
+// 캐시 데이터에 새로운 글 추가 축약버전
+queryClient.setQueryData<Article[]>("articles", (articles) => {
+  return (articles ?? []).concat(article);
+});
+
+/** after */
+// 페이지네이션(useInfiniteQuery)을 사용할 때는 캐시 데이터에 새로운 글을 추가하는 대신, 새로운 글을 포함한 새로운 페이지를 추가
+queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
+  if (!data) {
+    return {
+      pageParams: [undefined],
+      pages: [[article]],
+    };
+  }
+  const [firstPage, ...rest] = data.pages;
+  return {
+    ...data,
+    pages: [[article, ...firstPage], ...rest],
+  };
+});
+```
+
+### 15.10.4 화면을 아래로 당겨서 새로고침하기
+
+- FlatList의 refreshControl
+  - ScrollView, ListView에서 화면을 아래로 당기면 새로고침 하는 것
+- RefreshControl
+  - refreshControl 프롭에 전달하는 컴포넌트, 공식같은 것임
+
+```tsx
+<FlatList
+  data={articles}
+  renderItem={({ item }) => (
+    <ArticleItem
+      id={item.id}
+      title={item.title}
+      publishedAt={item.published_at}
+      username={item.user.username}
+    />
+  )}
+  keyExtractor={(item) => item.id.toString()}
+  style={styles.list}
+  ItemSeparatorComponent={() => <View style={styles.separator} />}
+  ListHeaderComponent={() => (showWriteButton ? <WriteButton /> : null)}
+  ListFooterComponent={() => (
+    <>
+      {/* articles가 1개 이상 있을 때만 최하단 테두리 보여주기 */}
+      {articles.length > 0 ? <View style={styles.separator} /> : null}
+      {isFetchingNextPage && (
+        <ActivityIndicator size="small" style={styles.spinner} />
+      )}
+    </>
+  )}
+  onEndReached={fetchNextPage}
+  refreshControl={
+    // 화면을 아래로 당겨서 새로고침
+    <RefreshControl refreshing={isRefreshing} onRefresh={refetch} />
+  }
+/>
+```
+
+- 다 좋은데 세 번째 요청까지 했다면 세 개의 요청을 다시함
+  - 불필요한 요청을 많이 하게 됨
+  - useInfiniteQuery는 반대 방향으로도 페이지네이션 할 수 있음
