--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -624,6 +624,7 @@ queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
   - ScrollView, ListView에서 화면을 아래로 당기면 새로고침 하는 것
 - RefreshControl
   - refreshControl 프롭에 전달하는 컴포넌트, 공식같은 것임
+  - https://reactnative.dev/docs/refreshcontrol
 
 ```tsx
 <FlatList
@@ -660,3 +661,9 @@ queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
 - 다 좋은데 세 번째 요청까지 했다면 세 개의 요청을 다시함
   - 불필요한 요청을 많이 하게 됨
   - useInfiniteQuery는 반대 방향으로도 페이지네이션 할 수 있음
+
+## 15.11 게시글 수정/삭제 기능 구현하기
+
+- 수정, 삭제 버튼 UI 추가
+
+- TODO: 수정 기능 구현하기
