--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -665,5 +665,8 @@ queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
 ## 15.11 게시글 수정/삭제 기능 구현하기
 
 - 수정, 삭제 버튼 UI 추가
-
-- TODO: 수정 기능 구현하기
+- 수정 버튼 클릭 시 캐싱 된 데이터를 찾아서 화면에 표시
+- 수정 요청
+  - 간단히 캐싱된 데이터에 invalidate를 하거나
+  - setQueryData를 사용해서 업데이트를 해줄 수 있다
+    - 이 경우 불변성 유지를 해야하기 때문에 map과 find를 활요하여 구현해야 한다
