--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -679,3 +679,9 @@ queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
 - 실수로 삭제하는 것을 방지하기 위해 삭제 버튼을 눌렀을 때 정말 삭제할지 물어보도록 하자
 - AskDialog.tsx 추가
   - 댓글 삭제에서도 사용 예정
+
+## 15.12 댓글 작성/수정/삭제 기능 구현하기
+
+- 댓글 기능을 구현해보자
+
+### 15.12.1 API 함수 준비하기
