--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -685,3 +685,8 @@ queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
 - 댓글 기능을 구현해보자
 
 ### 15.12.1 API 함수 준비하기
+
+### 15.12.2 댓글 작성 컴포넌트 만들기
+
+- 모바일에서 입력창은 모달 레이어를 띄워서 작성하는 경우가 많음
+- TextInput에서 onSubmitEditing 프롭 설정으로 HTML form submit처럼 엔터를 쳐도 onSubmit 을 실행시킬 수 있음
