--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -690,3 +690,7 @@ queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
 
 - 모바일에서 입력창은 모달 레이어를 띄워서 작성하는 경우가 많음
 - TextInput에서 onSubmitEditing 프롭 설정으로 HTML form submit처럼 엔터를 쳐도 onSubmit 을 실행시킬 수 있음
+
+### 15.12.3 댓글 삭제 기능 구현하기
+
+- 본인이 작성한 댓글인지 구분할 수 있어야 함
