--- a/docs/15_리액트쿼리.md
+++ b/docs/15_리액트쿼리.md
@@ -694,3 +694,12 @@ queryClient.setQueryData<InfiniteData<Article[]>>("articles", (data) => {
 ### 15.12.3 댓글 삭제 기능 구현하기
 
 - 본인이 작성한 댓글인지 구분할 수 있어야 함
+
+### 15.12.4 댓글 수정 기능 구현
+
+## 15.13 정리
+
+- API 연동 작업을 할 때 리액트 쿼리를 사용하면 더 쉽게 진행할 수 있습니다
+- 리액트 쿼리와 비슷한 라이브러리 : SWR
+- 리액트 쿼리 : Promise를 반환하는 함수를 기반으로 Hook을 작성
+- SWR : useSWR이라는 Hook을 사용할 때 해당 Hook 함수의 인자에 API주소를 입력
