--- a/docs/16_앱스토어.md
+++ b/docs/16_앱스토어.md
@@ -97,3 +97,113 @@ npx react-native run-android --variant=release
 - 서명 후 AAB 파일을 업로드
   - 앱을 처음 등록하는 경우 '아직 앱을 게시할 수 없습니다. 앱 대시보드에 안내된 단계를 완료하세요'라는 오류가 나옴
   - 대시 보드로 가서 앱 등록 정보, 국가 및 지역 등을 작성 -> 앱 출시 가능
+
+## 16.3 iOS 앱 등록하기
+
+### 16.3.1 App Transport Security 활성화하기
+
+- App Transport Security는 iOS 9부터 적용되는 앱 보안 정책
+
+  - HTTPS 요청만 허용
+
+- ios/프로젝트이름/Info.plist
+  - NSAppTransportSecurity
+    - 해당 설정의 dict 내부를 주석 처리
+      - 개발환경에선 주석을 해제해야 됨
+
+### 16.3.2 Build Configuration 변경하기
+
+- Xcode에서 현재 ios 프로젝트를 열기
+  - Product > Scheme > Edit Scheme
+    - Build Configuration을 Debug 에서 Release로 변경
+
+### 16.3.3 앱 빌드하기
+
+- Xcode에서 Product > Build 클릭
+
+### 16.3.4 애플 개발자 계정 생성하기
+
+- https://developer.apple.com
+
+  - 애플 계정으로 로그인
+
+- Xcode 상단 메뉴의 `Xcode > Preferences` 클릭
+  - Accounts -> `+` 버튼을 눌러서 애플 계정을 추가
+
+### 16.3.5 실제 디바이스에서 앱 실행하기
+
+- 개발자 계정을 등록하면 실제 기기에서 앱을 실행할 수 있습니다
+- Xcode의 왼쪽 네비에서 프로젝트를 선택 후 `Signing & Capabilities` 탭을 열자
+
+  - Automatically manage signing 체크
+  - Team -> 방금 등록한 애플 계정 선택
+
+- iOS 디바이스를 컴퓨터에 연결
+  - Xcode 상단의 프로젝트 명 우측에서 실행할 기기 선택할 수 있음
+- 디바이스를 선택한 뒤 왼쪽 재생버튼을 누르면 빌드 및 기기에서 실행이 됨
+- 빌드 시 키체인 암호 입력창
+  - 비어있는 상태로 확인
+- 처음엔 앱 실행하는데 실패
+  - `Could not launch "App"`
+    - 개발용 인증서를 사용하기 때문
+    - 디바이스에서 `설정 > 일반` -> `기기관리` -> 신뢰 버튼을 누름
+  - 다시 실행하면 정상 실행 됨
+
+### 16.3.6 애플 개발자 프로그램 가입하기
+
+- 애플 개발자 프로그램의 경우 매년 129,000원을 결제해야 함
+- https://developer.apple.com
+  - Join the Developer Program
+  - Enroll
+  - ...
+- 가입 후 다시 `https://developer.apple.com`에서 로그인하면 좌측에 `Program Resources`가 생김
+
+### 16.3.7 인증서 발급받기
+
+- 앱 빌드 후 앱스토어에 출시하기 위해 인증서를 발급받아야 합니다
+
+  - 발급 방법
+    - 맥OS 키체인
+    - 애플 개발자 페이지에 업로드하여 수동으로 만들기
+    - Xcode에서 자동으로 만들기(제일 간단함)
+
+- Xcode에서 인증서 발급
+  - Xcode > Preference > Account
+    - Account에 보면 Role이 Agent라고 나타남(개발자 프로그램에 가입시, 아니면 그냥 User로 표기됨)
+    - `Manage Certificates` 클릭
+      - `+` -> `Apple Distribution` => 인증서 생성 됨
+
+### 16.3.8 디바이스 추가하기
+
+- 개발자 프로그램에 가입한 후에 앱을 출시전 실제 디바이스에서 앱을 테스트할 때 허용한 디바이스에서만 앱을 실행할 수 있음
+  - 애플 개발자 페이지에서 `Certificates, Identifier & Profiles`에 들어가서 추가
+  - 디바이스 아이디는 Xcode의 Window > Devices and Simulators를 누르면 Identifier 부분에서 확인 가능
+
+### 16.3.9 아이콘 설정
+
+- iOS를 출시하려면 아이콘이 꼭 설정되어 있어야 함
+- iOS/프로젝트이름/Images.xcassets/AppIcon.appiconset
+
+  - 기존 AppIcon.appiconset 폴더를 삭제 후 앱 준비한 새로운 AppIcon.appiconset 폴더로 교체
+
+- Xcode 재시작 후 Image.xcassets 를 열어보면 앱 아이콘 설정되어 있는 것을 확인할 수 있음
+
+### 16.3.10 앱 빌드 후 앱 스토어에 업로드하기
+
+- 앱 빌드 후 앱 스토어에 업로드 하는 것 : Xcode의 Archive라는 기능으로 할 수 있음
+- Product > Archive
+  - 오래 걸림(10분?)
+  - Archive 후 Window > Organizer 화면이 자동으로 열림(수동으로도 열 수 있음)
+- `Distribute App`(배포) 버튼 클릭
+- Next를 눌러서 진행
+- Code Signing 이 시작 됨
+  - 앱이 개발자가 빌드한 후 변조되지 않았다는 것을 증명하는 기술
+  - 아직 Upload를 누르지마세요 !!
+- Upload를 누르기 전에 우리의 앱 정보를 앱스토에어 생성해줘야 합니다
+  - https://appstoreconnect.apple.com
+  - 개발자 계정으로 로그인
+  - 나의 앱 선택
+  - 앱 추가
+  - 정보 입력
+  - 생성
+- Xcode에서 Code Signing 이후 나타난 `Upload`버튼 클릭
